fixed webkit scrollbar spacing

--- a/apps/cylinder-tracker/src/app/home/available-cylinders/available-cylinders.component.scss
+++ b/apps/cylinder-tracker/src/app/home/available-cylinders/available-cylinders.component.scss
@@ -184,8 +184,9 @@ li {
   justify-content: space-between;
   padding-top: 3px;
   padding-bottom: 3px;
-  padding-left: 17px;
   padding-right: 17px;
+  margin-left: 17px;
+  margin-right: 17px;
   background-color: #E1E1E1;
 
   .color-bar-space {
